# clay-studio

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHAT_HOOK_REDESIGN.md  CLAUDE.md  Dockerfile  Dockerfile.simple  IMPLEMENTATION_TODO.md  SANDBOX_ARCHITECTURE.md  claude-works  docker-compose.yml  fix-production.sh  package-lock.json  package.json  quick-fix.sh  redeploy.sh  test-share.html  test_datasource_update.md  test_tools  test_tools.rs
backend/: .env.example  CLAUDE_SDK_README.md  Cargo.toml  README.md  analysis-runtime-types.d.ts  cookies.txt  datasource_update_improvements.md  mcp_servers_http.json  test_mcp_http.py  test_mcp_tools.rs  test_normalization.json  test_update_claude.rs
backend/.sqlx/: query-04386fb15cab4a5c8acec4311716f30b2bb4f6c385793b681be897e6dfc6bf44.json  query-0612f1fb97306355a30ef46def4c3a40a8bf27da89152131e16cc76b7fe6dfc1.json  query-067c9eca453a22bad7ae08260d45220ce26cd5eb1557dd372196769f2379cef1.json  query-06953ef69c894f787bee14ffa51558e923b01c481d6e385ba7613ffe6a6b1c1e.json  query-0755e7e3a5577153d8217ecd5eb6be0123c785b3361a4cb895e402f1d8c3d929.json  query-0814a6b8a02747886b98f4790a8b223e552e2003f2bb0a6125082601d8b1bee1.json  query-083a323aef78245134d587d229f4a9c55527109eed87d725d9ce87f534d40b8d.json  query-099d9299cb2d64cd1ac32b8af2874e4fe9b625d9447dc9ac564b570b6fa68fee.json  query-0a7d6d552ba166afe4a4fa735e1dcb353158e2dcc9538c5ee497d2bed5621222.json  query-0a9327b3cc69412439eed676aa678f8fb411c9aad817768fbdc224a0cd3b3170.json  query-0af4a82c141fc4d22da048731a621853bd6af633f3a95c369a9d9348fceaa0d1.json  query-120eed61dacd7fb7710b7189b46069c241794d00b42d994df9b3b42676a04c1b.json  query-16aa04e7aefc4adb7b3537066c5c62c2aca88faa2442de457e68b32b647c1c5d.json  query-16aaa8e690cd88d4f547bd6b774a69237b7f5dcda1f858afb71f782d31a45abd.json  query-1952735a812513aae1d92f169a3752dcac3c75e8710c3afc16847521ce7ad2e4.json  query-1da40873e7d477b2d9a5abf1e5e0bda74df3a6f2cf93f105dbda39dc5bc7d4ed.json  query-1f0959f1b486fa83a92da6999e7e8abbdf0633c8982fdb623f1106d17b971918.json  query-1f291df726e489caac18d04e68cf6e1f6a53d118b9895fae5413f6238a795512.json  query-22da2828d5c0fa497fd591716779c021cd2f4a8c0cb988888797458097325705.json  query-2559b5227b3216ccba29a0dfea4e0e5eb127eaf18e0388df82d0172ed5d571ef.json  query-261c79e02fa6cf92056f3434334dc8211ee47f1183c43ba43531bfd1330ad635.json  query-29c4eb25ce6ffb88f401dbe0f93d32acabee97913af4a30570f48a17266f202a.json  query-2a424a9718081742aa06bee83d71e5685d3561297cc7474350eeeb4fa1828059.json  query-2bf8dba6d9bd3698b167b9f09ceee4c6927c80bd737ee20a2d41d3ebc8b2bd3d.json  query-33b425b8191cfdaa1e6d9fde8be0e6ffc8729e593cb187e795fec1de23515c07.json  query-3b0b7b5068015eb8bfa3065441e590d81fda4082a2bb0aeaba2e14ab51bf22f9.json  query-3dbe3b7706bfe8bfee702058237a3961211d65fc97db9680c659629a884bf0f1.json  query-428954bb1513399c84866f6fd98d6006ede51f3b4a60dd43b4f524ec68d02913.json  query-432d6dcd726a1f43d7a622b49b8f94eb14cbf3da6c61c621d4a2aa621e0361f6.json  query-440c983a4d7a8d4618499c1b55be5049f643a8287559144ffb14442820594171.json  query-4631fc2d5f71d82462d27640140fb1e2155c1465658b4e466f05b83f73dd687f.json  query-46f5500d92472907d3288ddc35aecbffde14d1a13edd4ac86de9bc18c4ecf2c5.json  query-46ff21ce5a2113519dba6b805257897027bbce966716b14ada8fa6f642318017.json  query-4cbff5fcac102c4e9b422e818799f80fa0845554b85f749494c020664c6b5df7.json  query-4cc1d007a7a0f6c19a1778be41fa4828f61a1137b950940047e80193b5138d61.json  query-4faf0d20fb97f5c2860de1d04934995f5fa67ae4b00f2a5806b64c4b68659cc6.json  query-53be07d1a1f2ab2019c12e100cc9f20b9a8d03f9aca9e0c9223dff234d361ad8.json  query-56056f7cc7d1d2b39904d84cffbe1f29e810008b2d30238e0bce86dff29973ef.json  query-57df6d38fba10fa08c3b3a3174e9bb89cedf6874621a8a9e5538400af0ce5a27.json  query-581daf1c28c27999991d2d06d11a81baf2747dc872d03fffec7f368c7bf15de5.json  (+59 more)
backend/docs/: ANALYSIS_DEPLOYMENT.md  ANALYSIS_EXECUTOR.md
backend/examples/: claude_sdk_usage.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_create_tables.rs  m20250116_000001_add_file_datasource_support.rs  m20250824_225443_create_sessions_table.rs  m20250824_234033_add_forgotten_message_field.rs  m20250824_create_file_uploads_table.rs  m20250825_000001_add_forgotten_after.rs  m20250825_085605_add_client_id_to_projects.rs  m20250825_create_message_files_table.rs  m20250826_000001_add_title_manual_flag.rs  m20250826_000001_use_is_forgotten_flag.rs  m20250826_000002_drop_tools_table.rs  m20250826_create_tool_usages_table.rs  m20250827_000001_add_role_to_users.rs  m20250827_add_domains_to_clients.rs  m20250829_add_deleted_at_to_projects.rs  m20250829_drop_clay_tools_used_column.rs  m20250905_add_deleted_at_to_data_sources.rs  m20250913_add_user_id_to_projects.rs  m20250929_add_progress_content_to_messages.rs
backend/migrations/: 20250830_add_tool_use_id.sql  20250915_create_analyses_tables.sql  20250915_create_project_shares.sql  20250915_update_analyses_tables.sql  20250926_add_context_to_projects.sql  20250926_add_updated_at_to_tool_usages.sql  20250927_02_drop_contexts_table.sql  20250927_create_contexts_table.sql  20250930_add_multi_user_support.sql  20251004_add_performance_indexes.sql
backend/src/: claude.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  state.rs
backend/src/api/: admin.rs  auth.rs  chat.rs  chat_ws.rs  client_management.rs  clients.rs  conversations.rs  conversations_forget.rs  conversations_transactions.rs  datasources.rs  debug.rs  mod.rs  projects.rs  prompt.rs  tool_usage.rs  upload.rs  user_management.rs  websocket.rs
backend/src/core/: mod.rs  tools.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  chat.rs  clients.rs  conversations.rs  mod.rs  projects.rs
backend/src/middleware/: auth.rs
backend/src/models/: analysis.rs  client.rs  client_config.rs  conversation.rs  data_source.rs  file_upload.rs  message.rs  message_role.rs  mod.rs  project.rs  project_member.rs  project_share.rs  session.rs  tool.rs  tool_usage.rs  user.rs
backend/src/utils/: auth.rs  claude_md_template.rs  command_logger.rs  config.rs  (+10 more)
backend/tests/: bun_analysis_test.rs
(+518 files in other folders)
