[package]
name = "clay-studio-backend"
version = "0.1.0"
edition = "2021"
default-run = "clay-studio-backend"

[lib]
name = "clay_studio_backend"
path = "src/lib.rs"

[[bin]]
name = "clay-studio-backend"
path = "src/main.rs"

[[bin]]
name = "mcp_server"
path = "src/bin/mcp_server.rs"

[[example]]
name = "claude_sdk_usage"
path = "examples/claude_sdk_usage.rs"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
salvo = { version = "0.78", features = ["serve-static", "websocket", "session", "sse"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "uuid", "chrono"] }
csv = "1.3"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["stream"] }
bcrypt = "0.15"
salvo-session = "0.78"
async-session = "3"
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"
regex = "1.10"
expectrl = "0.7"
async-trait = "0.1"
rand = "0.8"
socket2 = "0.5"
urlencoding = "2.1"

[dev-dependencies]
sea-orm-cli = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "codegen"] }