[package]
name = "clay-studio-backend"
version = "0.1.0"
edition = "2021"
default-run = "clay-studio-backend"

[lib]
name = "clay_studio_backend"
path = "src/lib.rs"

[[bin]]
name = "clay-studio-backend"
path = "src/main.rs"

[[bin]]
name = "mcp_server"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "analysis_executor"
path = "src/bin/analysis_executor.rs"


[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
salvo = { version = "0.78", features = ["serve-static", "websocket", "session", "sse"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "uuid", "chrono", "bigdecimal"] }
clickhouse = "0.12"
csv = "1.3"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
lazy_static = "1.4"
futures-util = "0.3"
thiserror = "2"
base64 = "0.22"
reqwest = { version = "0.12", features = ["stream", "json"] }
url = "2.5"
bcrypt = "0.15"
salvo-session = "0.78"
async-session = "3"
async-stream = "0.3"
futures = "0.3"
regex = "1.10"
libc = "0.2"
expectrl = "0.7"
async-trait = "0.1"
rand = "0.8"
socket2 = "0.5"
urlencoding = "2.1"
tiberius = { version = "0.12", features = ["tds73", "chrono", "sql-browser-tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
oracle = "0.6"
rust_xlsxwriter = "0.70"
rust_decimal = "1.37.2"
# Analysis sandbox dependencies
polars = { version = "0.44", features = ["lazy", "sql", "temporal", "strings"] }
cron = "0.12"
tempfile = "3.12"
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
zip = "2.1"
duckdb = { version = "1.0", features = ["bundled"] }
# System monitoring dependencies
sysinfo = "0.30"

# Document parsing dependencies
calamine = "0.26"          # Excel file parsing (.xlsx, .xls, .ods)
docx-rs = "0.4"           # Word document parsing (.docx) 
pdf-extract = "0.7"       # PDF text extraction

[dev-dependencies]
sea-orm-cli = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "codegen"] }
tempfile = "3.12"
