[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
uuid = "1.0"

[dependencies.sea-orm-migration]
version = "1.1"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]